# Lab_Programmazione_Nicolo

./: Account.cpp  Account.h  CMakeLists.txt  Date.h  Transaction.cpp  Transaction.h  main.cpp
Test/: AccountFixture.cpp  AccountTest.cpp  CMakeLists.txt  TransactionFixture.cpp  TransactionTest.cpp  runAllTests.cpp
Test/googletest-main/: CMakeLists.txt
